change option dropdown title underline the current category page fix mobile breakpoint values styling of the cart overlay add margin-bottom to contact form adjust spacing for welcome block rework product grid spacing

--- a/source/stylesheets/_variables.sass
+++ b/source/stylesheets/_variables.sass
@@ -10,8 +10,8 @@ $error-color:  #{"{{ theme.error_color }}"}
 $primary-font: #{"{{ theme.primary_font | font_family }}"}
 
 $break-large: 1200px
-$break-medium: 1024px
-$break-small: 768px
+$break-medium: 1023px
+$break-small: 767px
 $break-extra-small: 640px
 
 @mixin vertical-align
