--- a/source/stylesheets/cart.sass
+++ b/source/stylesheets/cart.sass
@@ -22,8 +22,10 @@
     top: 0
 
 .cart-page
+  +flexbox
   margin-top: 100px
-
+  padding-top: 100px
+  
 .cart-form
   width: 100%
   
@@ -213,4 +215,13 @@ input.option-quantity
 
 .checkout-btn
   margin-top: 50px
+  
+#cart
+  header
+    display: none
+  
+  footer
+    display: none
+  
+  
   
