--- a/source/stylesheets/contact.sass
+++ b/source/stylesheets/contact.sass
@@ -42,6 +42,9 @@
   
   @media screen and (max-width: $break-small)
     margin-bottom: 25px
+    
+    &.contact-spam
+      margin-bottom: 100px
   
 .captcha-instructions
   color: $secondary-text-color
